[package]
name = "robot-demos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-websocket"
path = "example/basic-websocket.rs"

[[bin]]
name = "hello-read"
path = "example/hello-read.rs"
required-features = ["kcp"]

[[bin]]
name = "base-ez-control"
path = "example/base-ez-control.rs"
required-features = ["kcp"]

[[bin]]
name = "base-ez-control-websocket"
path = "example/base-ez-control-websocket.rs"

[[bin]]
name = "linear-lift-move-websocket"
path = "example/linear-lift-move-websocket.rs"

[[bin]]
name = "rotational-lift-move-to-zero-position-websocket"
path = "example/rotational-lift-move-to-zero-position-websocket.rs"

[[bin]]
name = "read-time-stamp-websocket"
path = "example/read-time-stamp-websocket.rs"

[[bin]]
name = "arm-ez-control"
path = "example/arm-ez-control.rs"
required-features = ["kcp"]

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
prost = "0.12"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
tokio-util = "0.7.12"
libc = "0.2"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
lazy_static = "1.4.0"
url = "2.5.7"
kcp-bindings = {version = "1.1.0", features = ["hexfellow"], optional = true}
mdns-sd = "0.17.1"
indicatif = "0.17"
colored = "2.1"

[features]
default = []
kcp = ["kcp-bindings"]

[build-dependencies]
prost-build = { version = "0.12.4" }
