[package]
name = "robot-demos"
version = "0.1.0"
edition = "2021"

[[example]]
name = "legacy-lift-simulator"
path = "examples/legacy-lift-simulator.rs"
required-features = ["socketcan"]

[[example]]
name = "base-control-motor-limit-current"
path = "examples/base-control-motor-limit-current.rs"
required-features = ["kcp"]

[[example]]
name = "can-forwarder"
path = "examples/can-forwarder.rs"
required-features = ["socketcan", "kcp"]

[[example]]
name = "hello-read"
path = "examples/hello-read.rs"
required-features = ["kcp"]

[[example]]
name = "base-ez-control"
path = "examples/base-ez-control.rs"
required-features = ["kcp"]

[[example]]
name = "zenoh-read"
path = "examples/zenoh-read.rs"
required-features = ["tui"]

[[example]]
name = "arm-ez-control"
path = "examples/arm-ez-control.rs"
required-features = ["kcp"]

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
prost = "0.12"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
tokio-util = "0.7.12"
libc = "0.2"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
lazy_static = "1.4.0"
url = "2.5.7"
kcp-bindings = {version = "1.1.0", features = ["hexfellow"], optional = true}
mdns-sd = "0.17.1"
indicatif = "0.17"
colored = "2.1"
socketcan = { version = "3.5.0", features = ["tokio", "enumerate"], optional = true }
serde_json = "1.0"
zenoh = { version = "1", optional = true }
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29", optional = true }

[features]
default = []
kcp = ["kcp-bindings"]
tui = ["dep:zenoh", "dep:ratatui", "dep:crossterm"]

[build-dependencies]
prost-build = { version = "0.12.4" }
